--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -105,7 +105,7 @@ body {
 }
 
 body.main-page {
-  background-color: #141414;
+  background-color: #ffffff;
 
   .bar-header {
     background-color: rgba(0, 0, 0, 0.85);
