--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <a id="menu" role="button">
         <svg id="open" class="icon-menu"><use xlink:href="#icon-menu"></use></svg>
     </a>
-    <h1 class="logo">
+    <!-- <h1 class="logo">
         <a href="{{ site.baseurl }}/">
             {% if site.use_logo %}
                 {% include logo.html %}
@@ -10,13 +10,13 @@
                 {{ site.name }} <span class="version">{{ site.version }}</span>
             {% endif %}
         </a>
-    </h1>
+    </h1> -->
     <a id="search" class="dosearch" role="button">
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
     {% if site.show_get_theme_btn %}
-        <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
-            Get this theme!
+        <a href="https://www.linkedin.com/in/deepti9v/" class="get-theme" role="button">
+            Connect on Linked In!
         </a>
     {% endif %}
 </header>
