--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -91,7 +91,7 @@ body {
     font-size: rem(13px);
     font-weight: bold;
     text-decoration: none;
-    background-color: $themeColor;
+    background-color: rgb(23, 107, 146);
     color: $accentDark;
     padding: rem(5px) rem(10px);
     border-radius: rem(5px);
