body.main-page to whitesmoke

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -105,7 +105,8 @@ body {
 }
 
 body.main-page {
-  background-color: #141414;
+  // background-color: #141414;
+  background-color: whitesmoke;
 
   .bar-header {
     background-color: rgba(0, 0, 0, 0.85);
