--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -1,7 +1,7 @@
 $theme: (
   themeColor: #ff0a16,
   primaryDark: #141414,
-  accentDark: #ffffff,
-  lightGray: #f2f2f2,
+  accentDark: #141414,
+  lightGray: #141414,
   texts: #333333
 );
