--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,10 +18,9 @@ layout: main
     {% if site.show_hero and paginator == nil or paginator.page == 1 %}
         <!-- Hero -->
         {% assign featured = posts.first %}
-        <!-- <section class="hero" style="background-image: url({{ featured.image }})"> -->
-        <section class="hero" style=""></section>
-            <!-- <div class="pixels"></div>
-            <div class="gradient"></div> 
+        <section class="hero" style="background-image: url({{ featured.image }})">
+            <div class="pixels"></div>
+            <div class="gradient"></div>
             <div class="content">
                 <time datetime="{{ featured.date | date_to_xmlschema }}" class="date">
                     {% if site.date_format == nil %}
@@ -38,7 +37,7 @@ layout: main
                         <span>{{ site.translations.button.read_now | default: "Read Now" }}</span>
                     </a>
                 </div>
-            </div> -->
+            </div>
         </section>
     {% endif %}
     <!-- Posts -->
