removing the time stamp too

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,8 +19,8 @@ layout: main
         <!-- Hero -->
         {% assign featured = posts.first %}
         <section class="hero" style="background-image: url({{ featured.image }})">
-            <div class="pixels"></div>
-            <div class="gradient"></div>
+            <!-- <div class="pixels"></div>
+            <div class="gradient"></div> -->
             <div class="content">
                 <time datetime="{{ featured.date | date_to_xmlschema }}" class="date">
                     {% if site.date_format == nil %}
@@ -31,12 +31,12 @@ layout: main
                 </time>
                 <h1 class="title">{{ featured.title }}</h1>
                 <p class="description">{{ featured.subtitle }}</p>
-                <div class="buttons">
+                <!-- <div class="buttons">
                     <a href="{{ featured.url | prepend: site.baseurl }}" role="button" class="button">
                         <svg><use xlink:href="#icon-read"></use></svg>
                         <span>{{ site.translations.button.read_now | default: "Read Now" }}</span>
                     </a>
-                </div>
+                </div> -->
             </div>
         </section>
     {% endif %}
