--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,15 +22,15 @@ layout: main
             <!-- <div class="pixels"></div>
             <div class="gradient"></div> -->
             <div class="content">
-                <time datetime="{{ featured.date | date_to_xmlschema }}" class="date">
+                <!-- <time datetime="{{ featured.date | date_to_xmlschema }}" class="date">
                     {% if site.date_format == nil %}
                         {{ featured.date | date: "%m.%d.%Y" }}
                     {% else %}
                         {{ featured.date | date: site.date_format }}
                     {% endif %}
-                </time>
-                <h1 class="title">{{ featured.title }}</h1>
-                <p class="description">{{ featured.subtitle }}</p>
+                </time> -->
+                <!-- <h1 class="title">{{ featured.title }}</h1> -->
+                <!-- <p class="description">{{ featured.subtitle }}</p> -->
                 <!-- <div class="buttons">
                     <a href="{{ featured.url | prepend: site.baseurl }}" role="button" class="button">
                         <svg><use xlink:href="#icon-read"></use></svg>
